force-app/main/default/objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;https://drive.google.com/file/d/15acntzsvYrXssJUcIYx7HKwlYd3DBrXs/view?usp=sharing&quot;, &quot;TEST&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>