force-app/main/default/objects/Product2/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <label>Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Heart Rate</fullName>
            </value>
            <value>
                <fullName>Blood Pressure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>