force-app/main/default/objects/Product2/fields/Mount__c.field-meta.xml
<CustomField>
    <fullName>Mount__c</fullName>
    <label>Mount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Tilt</fullName>
            </value>
            <value>
                <fullName>Full Motion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>