force-app/main/default/objects/Product2/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (Kg)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>